name:                lbac
version:             0.0.0.1
synopsis:            Community follow-along with the classic "Let's Build a Compiler" with a modern twist.
description:         Please see README.md
homepage:            http://github.com/sophialhudson/lbac
license:             MIT
license-file:        LICENSE
author:              Sophia Hudson, Jason Hills
maintainer:          sophialhudson@gmail.com, jasonahills@gmail.com
copyright:           2016
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10

executable lbac
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
